# dev-nodes

./: .gitignore  pyproject.toml
projects/dev/: PARALLEL_GA_SCHEDULER_DOCUMENTATION.md  distributed_ga_scheduler.py  distributed_ga_scheduler_dev.py  distributed_optimal_schedule.csv  ga_improvements.md  ga_jobshop_scheduler.py  ga_jobshop_scheduler_additional.py  ga_jobshop_scheduler_additional_dev.py  ga_jobshop_scheduler_additional_v2.py  ga_jobshop_scheduler_additional_v3.py  ga_jobshop_scheduler_additional_v3_parallel.py  ga_jobshop_scheduler_continuous_only.py  ga_jobshop_scheduler_dev.py  ga_jobshop_scheduler_fixed_only.py  ga_jobshop_scheduler_v2_continuous_only.py  ga_jobshop_scheduler_v2_fixed_only.py  generate_toy_dataset.py  generate_toy_dataset_additional.py  generate_toy_dataset_additional_v2.py  large_dataset.xlsx  large_dataset_additional.xlsx  optimal_schedule.csv  optimal_schedule_additional.csv  optimal_schedule_v2.csv  run_distributed_scheduler.py  run_parallel_scheduler.py  run_scheduler.py  run_scheduler_additional.py  run_scheduler_additional_dev.py  run_scheduler_additional_v2.py  run_scheduler_additional_v3.py  test_scheduler_v2.py  toy_dataset.xlsx  toy_dataset_additional.xlsx
projects/docs/: README.md  algorithm_documentation.md  data_structures_constraints.md  ga_algorithm_overview.md  ga_implementation_details.md  ga_scheduler_v2_algorithm.md  ga_scheduler_v3_algorithm.md  problem_specific_optimizations.md  settings.md  settings_additional.md
